# swagger.json
@@ -90,7 +90,7 @@
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/CreateProductsDto"
+                                "$ref": "#/components/schemas/UpdateProductsDto"
                             }
                         }
                     }
@@ -105,6 +105,36 @@
                                 }
                             }
                         }
+                    }
+                }
+            }
+        },
+        "/products/delete/{id}": {
+            "delete": {
+                "operationId": "ProductsController_delete",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "required": true,
+                        "in": "path",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Product not found"
                     }
                 }
             }
@@ -151,6 +181,25 @@
                 "properties": {}
             },
             "ProductsRespondDto": {
+                "type": "object",
+                "properties": {
+                    "title": {
+                        "type": "string"
+                    },
+                    "description": {
+                        "type": "string"
+                    },
+                    "price": {
+                        "type": "number"
+                    }
+                },
+                "required": [
+                    "title",
+                    "description",
+                    "price"
+                ]
+            },
+            "UpdateProductsDto": {
                 "type": "object",
                 "properties": {
                     "title": {
